--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <article>
         Esta es mi primera página en code con Platzi!!
+        Con envío en GitHub, Yupiii!!
     </article>
 </body>
 </html>
